--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
     add-mappings: false
   mail:
     host: SMTP
-    port: PORT
+    port: 10
     username: USERNAME
     password: PASSWORD
   freemarker:
@@ -40,7 +40,7 @@ algafood:
       id-access-key: ID_ACCESS_KEY
       secret-access-key: SECRET_ACCESS_KEY
       bucket: BUCKET
-      region: REGION
+      region: US_EAST_1
       directory: DIRECTORY
   email:
     sender: SENDER
